<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_papers_tiled"
    android:paddingStart="32dp"
    android:paddingTop="28dp"
    android:paddingEnd="32dp"
    android:paddingBottom="20dp"
    tools:context=".StartFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signOut"
        style="@style/Widget.WhatIf.Button.Secondary"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Sign Out"
        android:textSize="13sp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/what_if_full_logo"
        app:layout_constraintBottom_toTopOf="@id/enterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="170dp"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_percent="0.52" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@drawable/custom_edit_text"
        android:gravity="center"
        android:hint="Enter your name..."
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/space_32"
        app:layout_constraintBottom_toTopOf="@id/create_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_logo"
        app:layout_constraintWidth_max="480dp"
        app:layout_constraintWidth_percent="0.72" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/enterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/enterName"
        app:layout_constraintWidth_max="480dp"
        app:layout_constraintWidth_percent="0.72"
        tools:text="Player Name"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_game"
        style="@style/Widget.WhatIf.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_standard"
        android:layout_marginTop="@dimen/space_16"
        android:text="Create Game"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/joinGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterName"
        app:layout_constraintWidth_max="480dp"
        app:layout_constraintWidth_percent="0.72" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joinGame"
        style="@style/Widget.WhatIf.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_standard"
        android:layout_marginTop="@dimen/space_16"
        android:text="Join Game"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/secondary_actions"
        app:layout_constraintEnd_toEndOf="@id/create_game"
        app:layout_constraintStart_toStartOf="@id/create_game"
        app:layout_constraintTop_toBottomOf="@id/create_game" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondary_actions"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/space_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/joinGame"
        app:layout_constraintWidth_max="480dp"
        app:layout_constraintWidth_percent="0.72">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/leaderboards_button"
            android:visibility="gone"
            style="@style/Widget.WhatIf.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginEnd="@dimen/space_16"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:singleLine="false"
            android:text="Leader\nBoards"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profile_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_button"
            style="@style/Widget.WhatIf.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:text="Profile"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/leaderboards_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            style="@style/Widget.WhatIf.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:text="Back"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/leaderboards_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
