...
        style="@style/Widget.WhatIf.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_hero"
        android:layout_marginTop="@dimen/space_32"
        android:text="Account Play"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/freePlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_max="350dp"
        app:layout_constraintWidth_percent="0.56" />

...
